--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -20,7 +20,13 @@
 # ===================================================================
 
 # NK ##########################
-
+    
+    # Open file with custom application arguments
+        # Dont use :open_with as it wont pass application arguments,
+        # use ":shell %s" instead - "@" is keyboard shortcut
+            # Example (use "@" for ":shell %s"
+                # :shell vimx --servername ABE --remote-silent %s
+                
     # Show flat hierarchy
         # :flat 1
         # :flat -1
