ranger - open file with custom application arguments
:shell vimx --servername ABE --remote-silent %s
shell %s - "@" shortcut

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -26,6 +26,7 @@
         # use ":shell %s" instead - "@" is keyboard shortcut
             # Example (use "@" for ":shell %s"
                 # :shell vimx --servername ABE --remote-silent %s
+                # BtW use "vimx" in order to open vim in terminal with servername support when gvim is installed
                 
     # Show flat hierarchy
         # :flat 1
