Tmux - renumber windows when closed

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -10,6 +10,25 @@
     # https://learnxinyminutes.com/docs/tmux/
     # https://github.com/nicknisi/dotfiles/blob/master/tmux/tmux.conf.symlink#L60
 
+# Plugins
+
+# List of plugins
+    # Tmux-ressurect - recover tmux sessions after restart
+    #    run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+
+    # set -g @plugin 'tmux-plugins/tpm'
+
+    # set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+    # set -g @plugin 'tmux-plugins/tmux-sensible'
+
+    # Other examples:
+    # set -g @plugin 'github_username/plugin_name'
+    # set -g @plugin 'git@github.com/user/plugin'
+    # set -g @plugin 'git@bitbucket.com/user/plugin'
+
+    # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+    # run '~/.tmux/plugins/tpm/tpm'
 # Set terminal to 256 colors
     # set -g default-terminal "screen-256color"
 
@@ -68,22 +87,11 @@
     # tile all windows
     unbind =
     bind = select-layout tiled
-# Plugins
 
-# List of plugins
-    # Tmux-ressurect - recover tmux sessions after restart
-    #    run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+# re-number windows when one is closed
+    set -g renumber-windows on
 
-    # set -g @plugin 'tmux-plugins/tpm'
-
-    # set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-    # set -g @plugin 'tmux-plugins/tmux-sensible'
-
-    # Other examples:
-    # set -g @plugin 'github_username/plugin_name'
-    # set -g @plugin 'git@github.com/user/plugin'
-    # set -g @plugin 'git@bitbucket.com/user/plugin'
-
-    # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-    # run '~/.tmux/plugins/tpm/tpm'
+# highlight window when it has new activity
+    setw -g monitor-activity on
+    set -g visual-activity on
