Ranger - Safety Upper Case shortcuts for remove/trash/paste/rename

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -20,14 +20,14 @@
 # ===================================================================
 
 # NK ##########################
-    
+
     # Open file with custom application arguments
         # Dont use :open_with as it wont pass application arguments,
         # use ":shell %s" instead - "@" is keyboard shortcut
             # Example (use "@" for ":shell %s"
                 # :shell vimx --servername ABE --remote-silent %s
                 # BtW use "vimx" in order to open vim in terminal with servername support when gvim is installed
-                
+
     # Show flat hierarchy
         # :flat 1
         # :flat -1
@@ -220,16 +220,18 @@ set metadata_deep_search false
 # == Command Aliases in the Console
 # ===================================================================
 
-alias e    edit
-alias q    quit
-alias q!   quitall
-alias qa   quitall
-alias qall quitall
+# alias e    edit
+# alias q    quit
+# alias q!   quitall
+# alias qa   quitall
+# alias qall quitall
 alias setl setlocal
 
 # http://ranger.nongnu.org/ranger.1.html
 alias filter     scout -prti
-alias find       scout -aeit
+# alias find       scout -aeit
+# nk - dont open automatically on match, remove a, remove e
+alias find       scout -it
 alias mark       scout -mr
 alias unmark     scout -Mr
 alias search     scout -rs
@@ -242,10 +244,10 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
-map     q quit
-copymap q ZZ ZQ
+# map     q quit
+# copymap q ZZ ZQ
 
-map R     reload_cwd
+# map R     reload_cwd
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
@@ -274,14 +276,14 @@ map Mp linemode permissions
 map Mt linemode metatitle
 
 # Tagging / Marking
-map t       tag_toggle
-map ut      tag_remove
+map T       tag_toggle
+map t       tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
-map v       mark_files all=True toggle=True
-map uv      mark_files all=True val=False
-map V       toggle_visual_mode
-map uV      toggle_visual_mode reverse=True
+map V       mark_files all=True toggle=True
+map uV      mark_files all=True val=False
+map v       toggle_visual_mode
+map uv      toggle_visual_mode reverse=True
 
 # For the nostalgics: Midnight Commander bindings
 map <F1> help
@@ -355,28 +357,45 @@ map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
-map a  rename_append
-map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
-map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
+map RR  console rename%space
+map RA  rename_append
+map Ra  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
+map RI  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
-map pp paste
-map po paste overwrite=True
-map pP paste append=True
-map pO paste overwrite=True append=True
-map pl paste_symlink relative=False
-map pL paste_symlink relative=True
-map phl paste_hardlink
-map pht paste_hardlinked_subtree
+unmap pp
+unmap po
+unmap pP
+unmap pO
+unmap pl
+unmap pL
+unmap phl
+unmap pht
 
+map PP paste
+map PO paste overwrite=True
+map PP paste append=True
+map PO paste overwrite=True append=True
+map PL paste_symlink relative=False
+map Pl paste_symlink relative=True
+map PHL paste_hardlink
+map PHL paste_hardlinked_subtree
+
+unmap dD
 # map dD console delete
-map dD       shell gvfs-trash %s
+map DR shell gvfs-trash %s
+# map Df rm -rf %s
 # map <DELETE> shell gvfs-trash %s
+unmap <DELETE>
 
-map dd cut
-map ud uncut
-map da cut mode=add
-map dr cut mode=remove
+unmap dd
+unmap ud
+unmap da
+unmap dr
+
+map DD cut
+map Dd uncut
+map DA cut mode=add
+map Da cut mode=remove
 
 map yy copy
 map uy uncut
@@ -384,10 +403,15 @@ map ya copy mode=add
 map yr copy mode=remove
 
 # Temporary workarounds
-map dgg eval fm.cut(dirarg=dict(to=0), narg=quantifier)
-map dG  eval fm.cut(dirarg=dict(to=-1), narg=quantifier)
-map dj  eval fm.cut(dirarg=dict(down=1), narg=quantifier)
-map dk  eval fm.cut(dirarg=dict(up=1), narg=quantifier)
+unmap dgg
+unmap dG
+unmap dj
+unmap dk
+
+map Dgg eval fm.cut(dirarg=dict(to=0), narg=quantifier)
+map DG  eval fm.cut(dirarg=dict(to=-1), narg=quantifier)
+map Dj  eval fm.cut(dirarg=dict(down=1), narg=quantifier)
+map Dk  eval fm.cut(dirarg=dict(up=1), narg=quantifier)
 map ygg eval fm.copy(dirarg=dict(to=0), narg=quantifier)
 map yG  eval fm.copy(dirarg=dict(to=-1), narg=quantifier)
 map yj  eval fm.copy(dirarg=dict(down=1), narg=quantifier)
