Tmux - removed <C-v>, <C-e> shortcuts, replaced with "e" and "E" for splitting, navigation timeout increased

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -82,8 +82,8 @@
     bind + resize-pane -U 10
 
 # split window and fix path for tmux 1.9
-    bind C-v split-window -v
-    bind C-e split-window -h
+    bind e split-window -v
+    bind E split-window -h
     # tile all windows
     unbind =
     bind = select-layout tiled
@@ -95,3 +95,15 @@
 # highlight window when it has new activity
     setw -g monitor-activity on
     set -g visual-activity on
+
+# Set timeout for tmux -r commands - pane selection
+    # 10 seconds
+    set-option repeat-time 10000
+        # http://superuser.com/questions/325110/how-to-turn-down-the-timeout-between-prefix-key-and-command-key-in-tmux
+
+# Map h,j,k,l for window navigation, like arrows
+    bind -r h select-pane -L
+    bind -r j select-pane -D
+    bind -r k select-pane -U
+    bind -r l select-pane -R
+        # http://unix.stackexchange.com/a/253324/156466
