Tmux - use "q" shortcut to switch panes by number

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -107,3 +107,7 @@
     bind -r k select-pane -U
     bind -r l select-pane -R
         # http://unix.stackexchange.com/a/253324/156466
+
+# Select pane by number
+    # Press "<C-a>q" and then wanted pane nubmer, for example "2"
+    # Pane numbers will be printed on screen, great
