Ranger - Silent open vim without blinking, use "shell -s" instead of "open_with" always; show directories in tabs, print ranger in tmux

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -23,9 +23,9 @@
 
     # Open file with custom application arguments
         # Dont use :open_with as it wont pass application arguments,
-        # use ":shell %s" instead - "@" is keyboard shortcut
-            # Example (use "@" for ":shell %s"
-                # :shell vimx --servername ABE --remote-silent %s
+        # use ":shell -s %s" instead - "@" is keyboard shortcut
+            # Example (use "@" for ":shell -s %s"
+                # :shell -s vimx --servername ABE --remote-silent %s
                 # BtW use "vimx" in order to open vim in terminal with servername support when gvim is installed
 
     # Show flat hierarchy
@@ -46,7 +46,8 @@ set show_hidden false
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete multiple
+# set confirm_on_delete multiple
+set confirm_on_delete always
 
 # Which script is used to generate file previews?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -120,7 +121,8 @@ set draw_progress_bar_in_status_bar true
 set draw_borders false
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+# set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -136,7 +138,8 @@ set display_tags_in_all_columns true
 set update_title false
 
 # Set the title to "ranger" in the tmux program?
-set update_tmux_title false
+# set update_tmux_title false
+set update_tmux_title true
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
@@ -238,6 +241,13 @@ alias search     scout -rs
 alias search_inc scout -rts
 alias travel     scout -aefiklst
 
+# NK_Alliases
+# http://ranger.nongnu.org/ranger.1.html
+    # -s - silent
+    alias shellS     shell -s
+
+    # alias open_withS open_with -f
+
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
@@ -257,15 +267,16 @@ map i display_file
 map ? help
 map W display_log
 map w taskview_open
-map S shell $SHELL
+map S shellS $SHELL
 
 map :  console
 map ;  console
-map !  console shell%space
-map @  console -p6 shell  %%s
-map #  console shell -p%space
-map s  console shell%space
-map r  chain draw_possible_programs; console open_with%space
+map !  console shellS%space
+map @  console -p6 shellS  %%s
+map #  console shellS -p%space
+map s  console shellS%space
+# map r  chain draw_possible_programs; console open_withS%space
+map r  chain draw_possible_programs; console shellS %space
 map f  console find%space
 map cd console cd%space
 
@@ -348,15 +359,15 @@ map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
-map du shell -p du --max-depth=1 -h --apparent-size
-map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
+map du shellS -p du --max-depth=1 -h --apparent-size
+map dU shellS -p du --max-depth=1 -h --apparent-size | sort -rh
 # map yp shell -f echo -n %%d/%%f | xsel -i; xsel -o | xsel -i -b
 # map yd shell -f echo -n %%d     | xsel -i; xsel -o | xsel -i -b
 # map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
 
-map yf shell -f echo -n %d/%f | xclip -selection clipboard
-map yd shell -f echo -n %d    | xclip -selection clipboard
-map yn shell -f echo -n %f    | xclip -selection clipboard
+map yf shellS -f echo -n %d/%f | xclip -selection clipboard
+map yd shellS -f echo -n %d    | xclip -selection clipboard
+map yn shellS -f echo -n %f    | xclip -selection clipboard
 
 # Filesystem Operations
 map =  chmod
@@ -386,7 +397,7 @@ map PHL paste_hardlinked_subtree
 
 unmap dD
 # map dD console delete
-map DR shell gvfs-trash %s
+map DR shellS gvfs-trash %s
 # map Df rm -rf %s
 # map <DELETE> shell gvfs-trash %s
 unmap <DELETE>
@@ -630,3 +641,17 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+### NK custom ###
+
+
+# Open with custom application
+    # shellS -> shell -s, silent
+    map ee shellS vim_GEN %s
+    # -s - silent
+        # map ee    console open_withS vim_GEN
+        # map ee    eval fm.ui.console.execute('open_withS vim_GEN')
+        # map ee   self.fm.execute_console('open_withS vim_GEN')
+        # self.fm.execute_console(string): Execute the string as a ranger command.
+        # map gR eval fm.cd(ranger.RANGERDIR)
+        # map Ra  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
