--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -93,8 +93,8 @@
     set -g renumber-windows on
 
 # highlight window when it has new activity
-    setw -g monitor-activity on
-    set -g visual-activity on
+    # setw -g monitor-activity on
+    # set -g visual-activity on
 
 # Set timeout for tmux -r commands - pane selection
     # 10 seconds
@@ -111,3 +111,37 @@
 # Select pane by number
     # Press "<C-a>q" and then wanted pane nubmer, for example "2"
     # Pane numbers will be printed on screen, great
+
+###########################
+# Colors
+###########################
+
+# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
+
+# set color of status activity
+# http://unix.stackexchange.com/questions/120857/tmux-monitor-activity-change-highlight-color
+setw -g window-status-activity-bg green
+setw -g window-status-activity-fg colour235
+
+#############################
+
+# show hostname, date, time, and battery in right status bar
+    # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+    set-option -g status-right '#[fg=green]#H#[default]'
+        # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
+            #[fg=red]#(battery discharging)#[default]#(battery charging)'
+        # set-option -g status-right ''
