Ranger - No silent shell when "S" is pressed, use regular "shell" then

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -267,7 +267,7 @@ map i display_file
 map ? help
 map W display_log
 map w taskview_open
-map S shellS $SHELL
+map S shell $SHELL
 
 map :  console
 map ;  console
