--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -93,8 +93,8 @@
     set -g renumber-windows on
 
 # highlight window when it has new activity
-    # setw -g monitor-activity on
-    # set -g visual-activity on
+    setw -g monitor-activity on
+    set -g visual-activity on
 
 # Set timeout for tmux -r commands - pane selection
     # 10 seconds
