Ranger - Fixed open_with, added shell argument; Preview directories set to false, reverted to shell for basic commands instead of shellS

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -104,7 +104,7 @@ set colorscheme default
 # And collapse (shrink) the last column if there is nothing to preview?
 # set preview_files true
 set preview_files false
-set preview_directories true
+set preview_directories false
 set collapse_preview true
 
 # Save the console history on exit?
@@ -254,6 +254,7 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
+unmap q
 # map     q quit
 # copymap q ZZ ZQ
 
@@ -276,7 +277,8 @@ map @  console -p6 shellS  %%s
 map #  console shellS -p%space
 map s  console shellS%space
 # map r  chain draw_possible_programs; console open_withS%space
-map r  chain draw_possible_programs; console shellS %space
+# map r  chain draw_possible_programs; console shellS %space %s
+map r chain draw_possible_programs; eval fm.open_console('shellS   ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 map f  console find%space
 map cd console cd%space
 
@@ -359,15 +361,15 @@ map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
-map du shellS -p du --max-depth=1 -h --apparent-size
-map dU shellS -p du --max-depth=1 -h --apparent-size | sort -rh
+map du shell -p du --max-depth=1 -h --apparent-size
+map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 # map yp shell -f echo -n %%d/%%f | xsel -i; xsel -o | xsel -i -b
 # map yd shell -f echo -n %%d     | xsel -i; xsel -o | xsel -i -b
 # map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
 
-map yf shellS -f echo -n %d/%f | xclip -selection clipboard
-map yd shellS -f echo -n %d    | xclip -selection clipboard
-map yn shellS -f echo -n %f    | xclip -selection clipboard
+map yf shell -f echo -n %d/%f | xclip -selection clipboard
+map yp shell -f echo -n %d    | xclip -selection clipboard
+map yn shell -f echo -n %f    | xclip -selection clipboard
 
 # Filesystem Operations
 map =  chmod
@@ -647,7 +649,8 @@ copytmap <ESC> q Q w <C-c>
 
 # Open with custom application
     # shellS -> shell -s, silent
-    map ee shellS vim_GEN %s
+    map ee shellS gvim_GEN %s
+    map er shellS vimx_GEN %s
     # -s - silent
         # map ee    console open_withS vim_GEN
         # map ee    eval fm.ui.console.execute('open_withS vim_GEN')
