Tmux - Increased servername length

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -141,7 +141,16 @@ setw -g window-status-activity-fg colour235
 
 # show hostname, date, time, and battery in right status bar
     # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
-    set-option -g status-right '#[fg=green]#H#[default]'
+    # set-option -g status-right '#[fg=green]#H#[default]'
+    set-option -g status-right ''
+
+    # set -g status-right '#[fg=white]#(hostname)@#(host `hostname`)'
+    # set -g status-right '#[fg=white]#(hostname)@#(host `hostname` | cut -d " " -f 4)'
+    # set -g status-right '#[fg=cyan,bold] #U@#H #[default]#[fg=blue]#(tmux display-message -p "#{pane_current_path}" | sed "s#$HOME#~#g") #[fg=red]%H:%M %d-%b-%y#[default]'
         # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
             #[fg=red]#(battery discharging)#[default]#(battery charging)'
         # set-option -g status-right ''
+    # tmux set-window-option synchronize-panes on
+
+# Increase number of characters for server name (left status)
+    set -g status-left-length 20
