--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -2,7 +2,27 @@
 # ADD TO callback.sh !!!
     # Call tmux with 256 color support
     #  -2  Force tmux to assume the terminal supports 256 colours.
-      # alias tmux='tmux -2'
+      # alias tmux2='tmux -2'
+
+# Install tmux on Ubuntu 12.04/Ubuntu 14.04
+
+    # Download latest tmux stable release from
+        # http://tmux.github.io/
+
+    # Install libevent-dev
+        # sudo apt-get install libevent-dev
+            # http://superuser.com/questions/196829/installing-tmux-on-ubuntu-from-source
+
+    # Install libncurses-dev
+        # sudo apt-get install libncurses-dev
+            # http://askubuntu.com/questions/270381/how-do-i-install-ncurses-header-files
+
+    # Install tmux
+        # cd "tmux_dir"
+        # > ./configure
+        # > make
+        # > sudo make install
+
 
 # Tips
     # https://github.com/tony/tmux-config/blob/master/.tmux.conf
@@ -156,3 +176,39 @@ setw -g window-status-activity-fg colour235
 # Increase number of characters for server name (left status)
     set -g status-left-length 20
         # https://github.com/tony/tmux-config/blob/master/.tmux.conf
+
+# Plugins
+# Plugin manager: https://github.com/tmux-plugins/tpm.git
+
+    # Install manager:
+        # 1) git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+        # 2) tmux source ~/.tmux.conf
+
+    # Install plugins
+        # 1)  Add new plugin to ~/.tmux.conf with set -g @plugin '...'
+        # 2)  Press prefix + I (capital I, as in Install) to fetch the plugin
+        # 2b) Update plugin: prefix + U
+        # i)  Plugins are installed at: ~/.tmux/plugins/
+
+    # Uninstall plugins:
+        # 1) Remove (or comment out) plugin from the list.
+        # 2) Press prefix + alt + u (lowercase u as in uninstall) to remove the plugin.
+
+# https://github.com/bruno-/dotfiles/blob/master/home/.tmux.conf
+    # List of plugins
+    set -g @plugin 'tmux-plugins/tpm'
+
+    set -g @plugin 'tmux-plugins/tmux-sensible'
+
+    set -g @plugin 'tmux-plugins/tmux-resurrect'
+        set -g @resurrect-processes 'ssh'
+        # set -g @resurrect-processes 'ssh'
+        # Sessions are stored at: ~/.tmux/resurrect/
+
+    # Other examples:
+    # set -g @plugin 'github_username/plugin_name'
+    # set -g @plugin 'git@github.com/user/plugin'
+    # set -g @plugin 'git@bitbucket.com/user/plugin'
+
+    # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+    run '~/.tmux/plugins/tpm/tpm'
