Ranger - Map Backspace to go back

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -321,6 +321,9 @@ map <CR>       move right=1
 #map <DELETE>   console delete
 map <INSERT>   console touch%space
 
+# Backspace
+copymap <LEFT>    <backspace>
+
 # VIM-like
 copymap <UP>       k
 copymap <DOWN>     j
