Tmux - Disable plugins use tmuxinator instead, open new window in same directory, column copy (block copy) explained: prefix+[, Ctrl+v, v

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -93,6 +93,11 @@
     bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
         # http://unix.stackexchange.com/a/131187
 
+    # Rectangle copy, column copy, copy selection
+        # Column copy       : prefix+[, C-v, v
+        # List vi copy keys : prefix, :list-keys -t vi-copy
+            # http://superuser.com/a/593712/292101
+
 # make delay shorter
     set -sg escape-time 0
 
@@ -177,6 +182,9 @@ setw -g window-status-activity-fg colour235
     set -g status-left-length 20
         # https://github.com/tony/tmux-config/blob/master/.tmux.conf
 
+# Open new window in same directory
+    bind c new-window -c "#{pane_current_path}"
+
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
 
@@ -211,4 +219,4 @@ setw -g window-status-activity-fg colour235
     # set -g @plugin 'git@bitbucket.com/user/plugin'
 
     # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-    run '~/.tmux/plugins/tpm/tpm'
+    # run '~/.tmux/plugins/tpm/tpm'
