Ranger - Mapped "F" for great "travel" mode

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -71,7 +71,7 @@ set vcs_aware false
 # disabled, local (only show local info), enabled (show local and remote
 # information).
 set vcs_backend_git enabled
-set vcs_backend_hg disabled
+set vcs_backend_hg  disabled
 set vcs_backend_bzr disabled
 
 # Use one of the supported image preview protocols
@@ -231,7 +231,7 @@ set metadata_deep_search false
 alias setl setlocal
 
 # http://ranger.nongnu.org/ranger.1.html
-alias filter     scout -prti
+alias filter     scout -prtis
 # alias find       scout -aeit
 # nk - dont open automatically on match, remove a, remove e
 alias find       scout -it
@@ -239,7 +239,7 @@ alias mark       scout -mr
 alias unmark     scout -Mr
 alias search     scout -rs
 alias search_inc scout -rts
-alias travel     scout -aefiklst
+alias travel     scout -efikst
 
 # NK_Alliases
 # http://ranger.nongnu.org/ranger.1.html
@@ -279,8 +279,10 @@ map s  console shellS%space
 # map r  chain draw_possible_programs; console open_withS%space
 # map r  chain draw_possible_programs; console shellS %space %s
 map r chain draw_possible_programs; eval fm.open_console('shellS   ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
-map f  console find%space
 map cd console cd%space
+
+map f  console find%space
+map F  console travel%space
 
 # Change the line mode
 map Mf linemode filename
