--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -108,11 +108,12 @@
     bind + resize-pane -U 10
 
 # split window and fix path for tmux 1.9
-    bind e split-window -v
-    bind E split-window -h
+    bind e split-window -v -c '#{pane_current_path}'
+    bind E split-window -h -c '#{pane_current_path}'
+    # tmux set-option default-path "$PWD"
     # tile all windows
-    unbind =
-    bind = select-layout tiled
+        unbind =
+        bind = select-layout tiled
 
 # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
 # re-number windows when one is closed
@@ -184,6 +185,11 @@ setw -g window-status-activity-fg colour235
 
 # Open new window in same directory
     bind c new-window -c "#{pane_current_path}"
+
+# Kill pane without confirmation, no prompt
+    bind-key x kill-pane
+    # bind-key x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+        # http://unix.stackexchange.com/questions/30270/tmux-disable-confirmation-prompt-on-kill-window
 
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
