Tmux - Default directory for new pane/window is PWD

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -110,7 +110,8 @@
 # split window and fix path for tmux 1.9
     bind e split-window -v -c '#{pane_current_path}'
     bind E split-window -h -c '#{pane_current_path}'
-    # tmux set-option default-path "$PWD"
+    set-option default-path "$PWD"
+        # http://unix.stackexchange.com/questions/12032/create-new-window-with-current-directory-in-tmux
     # tile all windows
         unbind =
         bind = select-layout tiled
