Ranger - Added external copy (ye) and paste mappings (PE), so we can copy/paste between muliple running ranger instances

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -393,9 +393,11 @@ unmap pL
 unmap phl
 unmap pht
 
-map PP paste
+# map PP paste
 map PO paste overwrite=True
 map PP paste append=True
+map PX load_copy_buffer
+map PE chain load_copy_buffer; paste append=True
 map PO paste overwrite=True append=True
 map PL paste_symlink relative=False
 map Pl paste_symlink relative=True
@@ -420,6 +422,8 @@ map DA cut mode=add
 map Da cut mode=remove
 
 map yy copy
+map yx save_copy_buffer
+map ye chain copy; save_copy_buffer
 map uy uncut
 map ya copy mode=add
 map yr copy mode=remove
