Tmux - Added clear screen(pane) in tmux "prefix+k"

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -192,6 +192,12 @@ setw -g window-status-activity-fg colour235
     # bind-key x confirm-before -p "kill-pane #P? (y/n)" kill-pane
         # http://unix.stackexchange.com/questions/30270/tmux-disable-confirmation-prompt-on-kill-window
 
+# Clear screen, send "cls" and clear tmux history
+    # bind-key k send-keys "cls" C-M \; clear-history;
+    bind-key k send-keys -R C-M \; clear-history
+        # https://coderwall.com/p/rkstvg/clear-pane-in-tmux
+        # http://stackoverflow.com/questions/19313807/tmux-send-keys-syntax
+
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
 
