Tmux - Added clipboard paste - prefix+C-p, added block/column selection with C-v

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -91,10 +91,15 @@
     bind -t vi-copy 'v' begin-selection
     # bind -t vi-copy 'y' copy-selection
     bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+    # bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
         # http://unix.stackexchange.com/a/131187
+    bind C-p run-shell "tmux set-buffer \"$(xclip -selection clipboard -o)\"; tmux paste-buffer"
+        # https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu
+        # http://stackoverflow.com/questions/749544/pipe-to-from-clipboard
 
     # Rectangle copy, column copy, copy selection
         # Column copy       : prefix+[, C-v, v
+            bind-key -t vi-copy 'C-v' rectangle-toggle
         # List vi copy keys : prefix, :list-keys -t vi-copy
             # http://superuser.com/a/593712/292101
 
