Ranger - "T" touch new text file, "t" tag_toggle

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -290,9 +290,12 @@ map Mi linemode fileinfo
 map Mp linemode permissions
 map Mt linemode metatitle
 
+# New file
+map T console touch%space
+
 # Tagging / Marking
-map T       tag_toggle
-map t       tag_remove
+map t       tag_toggle
+# map t       tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
 map V       mark_files all=True toggle=True
