Ranger - Use H,L to go back and forth in history

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -98,6 +98,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
+# set colorscheme default
 set colorscheme default
 
 # Preview files on the rightmost column?
@@ -670,3 +671,12 @@ copytmap <ESC> q Q w <C-c>
         # self.fm.execute_console(string): Execute the string as a ranger command.
         # map gR eval fm.cd(ranger.RANGERDIR)
         # map Ra  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
+
+# Go back and forth in history - H, L
+    # You move to directory A and want to open another tab in the same directory.
+    # Press ^N to open a new tab in $HOME
+    # Press H (history back) to instantly get back to directory A
+    # Press L (history forward) to go forward to $HOME
+
+# Show shell output
+    # :shell -w ls
