Tmux - Use small e for vertical split, confirm kill pane

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -113,8 +113,8 @@
     bind + resize-pane -U 10
 
 # split window and fix path for tmux 1.9
-    bind e split-window -v -c '#{pane_current_path}'
-    bind E split-window -h -c '#{pane_current_path}'
+    bind e split-window -h -c '#{pane_current_path}'
+    bind E split-window -v -c '#{pane_current_path}'
     set-option default-path "$PWD"
         # http://unix.stackexchange.com/questions/12032/create-new-window-with-current-directory-in-tmux
     # tile all windows
@@ -193,8 +193,8 @@ setw -g window-status-activity-fg colour235
     bind c new-window -c "#{pane_current_path}"
 
 # Kill pane without confirmation, no prompt
-    bind-key x kill-pane
-    # bind-key x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+    # bind-key x kill-pane
+    bind-key x confirm-before -p "kill-pane #P? (y/n)" kill-pane
         # http://unix.stackexchange.com/questions/30270/tmux-disable-confirmation-prompt-on-kill-window
 
 # Clear screen, send "cls" and clear tmux history
