Tmux - Removed warnings at startup

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -75,10 +75,10 @@
 
     # /ref/ http://superuser.com/a/492285/292101
         # Allow mouse to select which pane to use
-        set -g mouse-select-pane on
+        # set -g mouse-select-pane on
 
         # Make mouse useful in copy mode
-        setw -g mode-mouse on
+        # setw -g mode-mouse on
 
 # set vi mode for copy mode
     setw -g mode-keys vi
@@ -115,7 +115,7 @@
 # split window and fix path for tmux 1.9
     bind e split-window -h -c '#{pane_current_path}'
     bind E split-window -v -c '#{pane_current_path}'
-    set-option default-path "$PWD"
+    # set-option default-path "$PWD"
         # http://unix.stackexchange.com/questions/12032/create-new-window-with-current-directory-in-tmux
     # tile all windows
         unbind =
@@ -131,7 +131,7 @@
 
 # Set timeout for tmux -r commands - pane selection
     # 10 seconds
-    set-option repeat-time 10000
+    set-option -g repeat-time 10000
         # http://superuser.com/questions/325110/how-to-turn-down-the-timeout-between-prefix-key-and-command-key-in-tmux
 
 # Map h,j,k,l for window navigation, like arrows
