Ranger - Added ea open with acroread

--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -664,6 +664,8 @@ copytmap <ESC> q Q w <C-c>
     # shellS -> shell -s, silent
     map ee shellS gvim_GEN %s
     map er shellS vimx_GEN %s
+
+    map ea shellS acroread %s
     # -s - silent
         # map ee    console open_withS vim_GEN
         # map ee    eval fm.ui.console.execute('open_withS vim_GEN')
