Tmux - Added copy for cygwin

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -94,6 +94,8 @@
     # bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
         # http://unix.stackexchange.com/a/131187
     bind C-p run-shell "tmux set-buffer \"$(xclip -selection clipboard -o)\"; tmux paste-buffer"
+    # For Cygwin
+    # bind C-p run-shell "tmux set-buffer \"$(xclip -selection clipboard -o)\"; tmux paste-buffer"
         # https://coderwall.com/p/4b0d0a/how-to-copy-and-paste-with-tmux-on-ubuntu
         # http://stackoverflow.com/questions/749544/pipe-to-from-clipboard
 
