Tmux - Dont autorename windows

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -25,6 +25,7 @@
 
 
 # Tips
+    # https://github.com/gpakosz/.tmux/blob/master/.tmux.conf
     # https://github.com/tony/tmux-config/blob/master/.tmux.conf
     # http://www.dayid.org/comp/tm.html
     # https://github.com/nicknisi/dotfiles/blob/master/tmux/tmux.conf.symlink
@@ -205,6 +206,10 @@ setw -g window-status-activity-fg colour235
         # https://coderwall.com/p/rkstvg/clear-pane-in-tmux
         # http://stackoverflow.com/questions/19313807/tmux-send-keys-syntax
 
+# Dont autorename windows
+    set-option -g allow-rename off
+        # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
+
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
 
@@ -224,12 +229,12 @@ setw -g window-status-activity-fg colour235
 
 # https://github.com/bruno-/dotfiles/blob/master/home/.tmux.conf
     # List of plugins
-    set -g @plugin 'tmux-plugins/tpm'
+    # set -g @plugin 'tmux-plugins/tpm'
 
-    set -g @plugin 'tmux-plugins/tmux-sensible'
+    # set -g @plugin 'tmux-plugins/tmux-sensible'
 
-    set -g @plugin 'tmux-plugins/tmux-resurrect'
-        set -g @resurrect-processes 'ssh'
+    # set -g @plugin 'tmux-plugins/tmux-resurrect'
+        # set -g @resurrect-processes 'ssh'
         # set -g @resurrect-processes 'ssh'
         # Sessions are stored at: ~/.tmux/resurrect/
 
