--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -295,7 +295,7 @@ map Mt linemode metatitle
 map T console touch%space
 
 # Tagging / Marking
-map t       tag_toggle
+# map t       tag_toggle
 # map t       tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
@@ -355,7 +355,7 @@ map }     traverse
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
+# map gd cd /dev
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
