Tmux - Move windows left/right - Ctrl+Left/Right

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -210,6 +210,13 @@ setw -g window-status-activity-fg colour235
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
 
+# Move windows
+    # bind-key -n S-PgUp swap-window -t -1
+    # bind-key -n S-PgDn swap-window -t +1
+    bind-key -n C-Left swap-window -t -1
+    bind-key -n C-Right swap-window -t +1
+        # http://unix.stackexchange.com/a/151332/156466
+
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
 
