Tmux - Dont renumber windows, use tmux-resurrect

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -71,7 +71,7 @@
 # enable mouse support for switching panes/windows
     # setw -g mouse on
     # set-option -g -q mouse on
-    # setw -g mode-mouse on
+    setw -g mode-mouse on
     # set-window-option -g mode-mouse on
 
     # /ref/ http://superuser.com/a/492285/292101
@@ -126,7 +126,26 @@
 
 # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
 # re-number windows when one is closed
-    set -g renumber-windows on
+    # set -g renumber-windows on
+    set -g renumber-windows off
+
+# Move windows
+    # bind-key -n S-PgUp swap-window -t -1
+    # bind-key -n S-PgDn swap-window -t +1
+    bind-key -n C-Left swap-window -t -1
+    bind-key -n C-Right swap-window -t +1
+        # http://unix.stackexchange.com/a/151332/156466
+
+# Renumber all windows when wanted
+    # prefix + : "movew"
+    # :movew
+
+# Renumber current window to number 3
+    # :movew -t 3
+        # http://unix.stackexchange.com/a/234555/156466
+
+# Find window, or what is printed in window
+    # prefix + f
 
 # highlight window when it has new activity
     # setw -g monitor-activity on
@@ -210,15 +229,17 @@ setw -g window-status-activity-fg colour235
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
 
-# Move windows
-    # bind-key -n S-PgUp swap-window -t -1
-    # bind-key -n S-PgDn swap-window -t +1
-    bind-key -n C-Left swap-window -t -1
-    bind-key -n C-Right swap-window -t +1
-        # http://unix.stackexchange.com/a/151332/156466
+# Rename session
+    # prefix + $
+        # http://superuser.com/a/428025/292101
+
 
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
+
+    # tmux-ressurect
+        run-shell ~/local_sw/tmux-ressurect/resurrect.tmux
+            # https://github.com/tmux-plugins/tmux-resurrect
 
     # Install manager:
         # 1) git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
