Tmux - Comment for renumber session

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -229,7 +229,7 @@ setw -g window-status-activity-fg colour235
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
 
-# Rename session
+# Rename session, renumber session
     # prefix + $
         # http://superuser.com/a/428025/292101
 
