--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -71,7 +71,9 @@
 # enable mouse support for switching panes/windows
     # setw -g mouse on
     # set-option -g -q mouse on
-    setw -g mode-mouse on
+    if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
+        'setw -g mode-mouse on;'
+            # http://stackoverflow.com/a/36414566/2450748
     # set-window-option -g mode-mouse on
 
     # /ref/ http://superuser.com/a/492285/292101
