Tmux - Repeat time reduced to faster switch panes with arrow keys

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -69,8 +69,8 @@
     bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # enable mouse support for switching panes/windows
-    # setw -g mouse on
     # set-option -g -q mouse on
+    # setw -g mouse on
     if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
         'setw -g mode-mouse on;'
             # http://stackoverflow.com/a/36414566/2450748
@@ -155,7 +155,8 @@
 
 # Set timeout for tmux -r commands - pane selection
     # 10 seconds
-    set-option -g repeat-time 10000
+    set-option -g repeat-time 500
+    # set-option -g repeat-time 10000
         # http://superuser.com/questions/325110/how-to-turn-down-the-timeout-between-prefix-key-and-command-key-in-tmux
 
 # Map h,j,k,l for window navigation, like arrows
