Tmux - Move current window to other session, add -2 argument after opening tmux

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -131,7 +131,7 @@
     # set -g renumber-windows on
     set -g renumber-windows off
 
-# Move windows
+# move windows
     # bind-key -n S-PgUp swap-window -t -1
     # bind-key -n S-PgDn swap-window -t +1
     bind-key -n C-Left swap-window -t -1
@@ -232,10 +232,20 @@ setw -g window-status-activity-fg colour235
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
 
-# Rename session, renumber session
+# Rename session, renumber session, rename session
     # prefix + $
         # http://superuser.com/a/428025/292101
 
+# Move current window to other session
+    # Move window to session named "4"
+        # prefix + :
+        # :move-window -t 4:
+        # Pay attention to "4:"!!!
+            # http://stackoverflow.com/a/3123600/2450748
+
+# Add -2 argument after
+    # 1) detach session - prefix + D
+    # 2) tmux -2 attach -t 3
 
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
