Tmux - Added comments for version specific settings

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -71,6 +71,7 @@
 # enable mouse support for switching panes/windows
     # set-option -g -q mouse on
     # setw -g mouse on
+    # version specific function
     if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
         'setw -g mode-mouse on;'
             # http://stackoverflow.com/a/36414566/2450748
@@ -120,7 +121,10 @@
 # split window and fix path for tmux 1.9
     bind e split-window -h -c '#{pane_current_path}'
     bind E split-window -v -c '#{pane_current_path}'
-    # set-option default-path "$PWD"
+
+    # version specific function
+    if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
+        'set-option default-path "$PWD"'
         # http://unix.stackexchange.com/questions/12032/create-new-window-with-current-directory-in-tmux
     # tile all windows
         unbind =
