--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -54,9 +54,9 @@
 # Set terminal to 256 colors
     # set -g default-terminal "screen-256color"
 
-# unbind default prefix and set it to Ctrl+a
+# unbind default prefix and set it to Alt+a
     unbind C-b
-    set -g prefix C-a
+    set -g prefix M-a
     bind C-a send-prefix
     # for nested tmux sessions
     bind-key a send-prefix
