--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -57,7 +57,7 @@
 # unbind default prefix and set it to Alt+a
     unbind C-b
     set -g prefix M-a
-    bind C-a send-prefix
+    bind M-a send-prefix
     # for nested tmux sessions
     bind-key a send-prefix
 
@@ -232,9 +232,16 @@ setw -g window-status-activity-fg colour235
         # https://coderwall.com/p/rkstvg/clear-pane-in-tmux
         # http://stackoverflow.com/questions/19313807/tmux-send-keys-syntax
 
+
+# send-keys examples
+    # > tmux -2 send-keys "echo bre" C-m
+
 # Dont autorename windows
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
+
+# Increase history limit, scrollback
+    # set -g history-limit 5000
 
 # Rename session, renumber session, rename session
     # prefix + $
