Tmux - Added tmux-continuum

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -265,6 +265,9 @@ setw -g window-status-activity-fg colour235
         run-shell ~/local_sw/tmux-resurrect/resurrect.tmux
             # https://github.com/tmux-plugins/tmux-resurrect
 
+    # tmux-continuum
+        run-shell ~/local_sw/tmux-continuum/continuum.tmux
+
     # Install manager:
         # 1) git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
         # 2) tmux source ~/.tmux.conf
