Tmux - Select more than 10 windows (prefix + w)

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -214,6 +214,10 @@ setw -g window-status-activity-fg colour235
         # set-option -g status-right ''
     # tmux set-window-option synchronize-panes on
 
+# Synchronise panes
+    # prefix + :setw synchronise-panes on
+        # http://stackoverflow.com/questions/16325449/how-to-send-a-command-to-all-panes-in-tmux
+
 # Increase number of characters for server name (left status)
     set -g status-left-length 20
         # https://github.com/tony/tmux-config/blob/master/.tmux.conf
@@ -228,10 +232,9 @@ setw -g window-status-activity-fg colour235
 
 # Clear screen, send "cls" and clear tmux history
     # bind-key k send-keys "cls" C-M \; clear-history;
-    bind-key k send-keys -R C-M \; clear-history
+    bind-key o send-keys -R C-M \; clear-history
         # https://coderwall.com/p/rkstvg/clear-pane-in-tmux
         # http://stackoverflow.com/questions/19313807/tmux-send-keys-syntax
-
 
 # send-keys examples
     # > tmux -2 send-keys "echo bre" C-m
@@ -239,6 +242,10 @@ setw -g window-status-activity-fg colour235
 # Dont autorename windows
     set-option -g allow-rename off
         # http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
+
+# Select more windows than 10
+    # prefix + w - (1-9 and a-z)
+        # http://superuser.com/a/764108/292101
 
 # Increase history limit, scrollback
     # set -g history-limit 5000
