--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -52,7 +52,7 @@
     # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
     # run '~/.tmux/plugins/tpm/tpm'
 # Set terminal to 256 colors
-    # set -g default-terminal "screen-256color"
+    set -g default-terminal "screen-256color"
 
 # unbind default prefix and set it to Alt+a
     unbind C-b
