--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -265,6 +265,10 @@ setw -g window-status-activity-fg colour235
     # 1) detach session - prefix + D
     # 2) tmux -2 attach -t 3
 
+# Fix pane borders in some terminals
+    # alias tmux='tmux -u'
+        # https://github.com/zeit/hyper/issues/139#issuecomment-233388218
+
 # Plugins
 # Plugin manager: https://github.com/tmux-plugins/tpm.git
 
@@ -307,3 +311,78 @@ setw -g window-status-activity-fg colour235
 
     # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
     # run '~/.tmux/plugins/tpm/tpm'
+
+
+# <<<<<< BASIC TMUX CONFIG <<<<<<
+#############################
+
+    # unbind default prefix and set it to }
+        # unbind C-b
+        # set -g prefix }
+        # bind } send-prefix
+
+
+    # # split window and fix path for tmux 1.9
+        # bind e split-window -h -c '#{pane_current_path}'
+        # bind E split-window -v -c '#{pane_current_path}'
+
+    # # Open new window in same directory
+        # bind c new-window -c "#{pane_current_path}"
+
+    # # fix pane border characters
+        # # alias tmux="tmux -u"
+            # # https://github.com/zeit/hyper/issues/139#issuecomment-233388218
+
+    # # make window/pane index start with 1
+        # set -g base-index 1
+        # setw -g pane-base-index 1
+
+    # # reload config file
+        # bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+
+    # # make delay shorter
+        # set -sg escape-time 0
+
+    # # resize panes like vim
+        # bind < resize-pane -L 10
+        # bind > resize-pane -R 10
+        # bind - resize-pane -D 10
+        # bind + resize-pane -U 10
+
+    # # Dont autorename windows
+        # set-option -g allow-rename off
+
+    # # tile all windows
+        # unbind =
+        # bind = select-layout tiled
+
+
+    # ###########################
+    # # Colors
+    # ###########################
+
+    # # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+
+    # # color status bar
+    # set -g status-bg colour235
+    # set -g status-fg white
+
+    # # highlight current window
+    # set-window-option -g window-status-current-fg black
+    # set-window-option -g window-status-current-bg green
+
+    # # set color of active pane
+    # set -g pane-border-fg colour235
+    # set -g pane-border-bg black
+    # set -g pane-active-border-fg green
+    # set -g pane-active-border-bg black
+
+    # # set color of status activity
+    # # http://unix.stackexchange.com/questions/120857/tmux-monitor-activity-change-highlight-color
+    # setw -g window-status-activity-bg green
+    # setw -g window-status-activity-fg colour235
+
+    #############################
+
+#############################
+# >>>>>> BASIC TMUX CONFIG >>>>>>
