--- a/ranger/config_ranger/rc.conf
+++ b/ranger/config_ranger/rc.conf
@@ -105,7 +105,7 @@ set colorscheme default
 # And collapse (shrink) the last column if there is nothing to preview?
 # set preview_files true
 set preview_files false
-set preview_directories false
+set preview_directories true
 set collapse_preview true
 
 # Save the console history on exit?
