Tmux - Comment how to move windows

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -261,6 +261,11 @@ setw -g window-status-activity-fg colour235
         # Pay attention to "4:"!!!
             # http://stackoverflow.com/a/3123600/2450748
 
+# Move windows
+    # Move window 2 to position 1
+    # :move-window -s 2 -t 1
+        # https://unix.stackexchange.com/a/21751/156466
+
 # Add -2 argument after
     # 1) detach session - prefix + D
     # 2) tmux -2 attach -t 3
