Tmux - Synchronize panes: prefix Alt+y

--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -215,6 +215,7 @@ setw -g window-status-activity-fg colour235
     # tmux set-window-option synchronize-panes on
 
 # Synchronise panes
+    bind M-y setw synchronize-panes
     # prefix + :setw synchronise-panes on
         # http://stackoverflow.com/questions/16325449/how-to-send-a-command-to-all-panes-in-tmux
 
