--- a/tmux/dot_tmux.conf
+++ b/tmux/dot_tmux.conf
@@ -54,6 +54,10 @@
 # Set terminal to 256 colors
     set -g default-terminal "screen-256color"
 
+# Cygwin - split in same directory
+    # set-environment -g CHERE_INVOKING 1
+        # https://stackoverflow.com/a/26840429/2450748
+
 # unbind default prefix and set it to Alt+a
     unbind C-b
     set -g prefix M-a
