Tmux - Add references for tmux v3.0 changes

--- a/tmux/dot_tmux_v3-0.conf
+++ b/tmux/dot_tmux_v3-0.conf
@@ -1,4 +1,12 @@
 
+# Changes:
+    # v3.0:
+        # "copy-mode-vi" instead of "vi-copy"
+            # https://sanctum.geek.nz/arabesque/vi-mode-in-tmux/
+
+        # *-style instead of *-fg and *-bg
+            # https://github.com/tmux/tmux/issues/1691
+
 # ADD TO callback.sh !!!
     # Call tmux with 256 color support
     #  -2  Force tmux to assume the terminal supports 256 colours.
